# VocalShaper-old

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  MainWindow.h  README.md  Splash.cpp  Splash.h  VocalShaper.sln  VocalShaper_App.vcxproj  VocalSharper.sln  VocalSharper_App.vcxproj  cpp.hint  main.cpp  mainComponent.cpp
Docs/: How-to-develop-modules.md
JUCE_Library/: CMakeLists.txt  JUCE_Library.vcxproj  JUCE_Library.vcxproj.filters
Modules/: CMakeLists.txt  createLibLink.bat  removeLibLink.bat
Modules/VocalSharp.VocalShaper.CallbackReactor/: CMakeLists.txt  CallbackReactor.cpp  CallbackReactor.h  Main.cpp  VocalSharp_VocalShaper_CallbackReactor.cpp  VocalSharp_VocalShaper_CallbackReactor.h
Modules/VocalSharp.VocalShaper.ClipBoard/: ClipBoard.cpp  ClipBoard.h  Main.cpp  VocalSharp_VocalShaper_ClipBoard.cpp  VocalSharp_VocalShaper_ClipBoard.h
Modules/VocalSharp.VocalShaper.CommandManager/: CommandManager.cpp  CommandManager.h  Main.cpp  VocalSharp_VocalShaper_CommandManager.cpp  VocalSharp_VocalShaper_CommandManager.h
Modules/VocalSharp.VocalShaper.KPSEngine/: CMakeLists.txt  KPSEngine.cpp  KPSEngine.h  KPSPhonerator.cpp  KPSPhonerator.h  KPSRenderer.cpp  KPSRenderer.h  KPSSpliter.cpp  KPSSpliter.h  Main.cpp  VocalSharp_VocalShaper_KPSEngine.cpp  VocalSharp_VocalShaper_KPSEngine.h
Modules/VocalSharp.VocalShaper.KPSEngine/algorithm/: KarPlusStrong.cpp  KarPlusStrong.h
Modules/VocalSharp.VocalShaper.LookAndFeelFactory/: CMakeLists.txt  LAFFactory.cpp  LAFFactory.h  LabelEditorBubbleLAF.h  LabelEditorCallOutBoxLAF.h  Main.cpp  PlayBarTextButtonLAF.h  StartMenuButtonLAF.h  StatusBarFlatTextButtonLAF.h  StatusBarRoundButttonLAF.h  StretchableBarLAF.h  TrackViewLinkButtonLAF.h  TrackViewSMButtonLAF.h  VocalSharp_VocalShaper_LookAndFeelFactory.cpp  VocalSharp_VocalShaper_LookAndFeelFactory.h
Modules/VocalSharp.VocalShaper.Main/: CMakeLists.txt  Main.cpp  MainModule.cpp  MainModule.h  VocalSharp.VocalShaper.Main.vcxproj  VocalSharp.VocalShaper.Main.vcxproj.filters  VocalSharp_VocalShaper_Main.cpp  VocalSharp_VocalShaper_Main.h
Modules/VocalSharp.VocalShaper.MainEditor/: BottomEditor.cpp  BottomEditor.h  CMakeLists.txt  EditorComponent.cpp  EditorComponent.h  Main.cpp  StatusBar.cpp  StatusBar.h  StatusBarFlatTextButtonLAF.h  StatusBarRoundButttonLAF.h  StretchableBarLAF.h  ToolBar.cpp  ToolBar.h  TopEditor.cpp  TopEditor.h  TopLevelEditorBase.cpp  TopLevelEditorBase.h  VocalSharp_VocalShaper_MainEditor.cpp  VocalSharp_VocalShaper_MainEditor.h
Modules/VocalSharp.VocalShaper.MainMenu/: Main.cpp  MainMenu.cpp  MainMenu.h  VocalSharp_VocalShaper_MainMenu.cpp  VocalSharp_VocalShaper_MainMenu.h
Modules/VocalSharp.VocalShaper.MainUI/: Main.cpp  PlayBar.cpp  PlayBar.h  PlayBarTextButtonLAF.h  TabComponent.cpp  TabComponent.h  TabList.cpp  TabList.h  UIComponent.cpp  UIComponent.h  VocalSharp_VocalShaper_MainUI.cpp  VocalSharp_VocalShaper_MainUI.h
Modules/VocalSharp.VocalShaper.MainWindow/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  MainWindowModule.cpp  MainWindowModule.h  VocalSharp_VocalShaper_MainWindow.cpp  VocalSharp_VocalShaper_MainWindow.h
Modules/VocalSharp.VocalShaper.ProjectHistory/: CMakeLists.txt  HistoryManager.cpp  HistoryManager.h  Main.cpp  VocalSharp_VocalShaper_ProjectHistory.cpp  VocalSharp_VocalShaper_ProjectHistory.h
Modules/VocalSharp.VocalShaper.ProjectHub/: CMakeLists.txt  Main.cpp  ProjectHub.cpp  ProjectHub.h  VocalSharp_VocalShaper_ProjectHub.cpp  VocalSharp_VocalShaper_ProjectHub.h
Modules/VocalSharp.VocalShaper.ProjectIO/: CMakeLists.txt  Main.cpp  ProjectIO.cpp  ProjectIO.h  VocalSharp_VocalShaper_ProjectIO.cpp  VocalSharp_VocalShaper_ProjectIO.h
Modules/VocalSharp.VocalShaper.StartMenu/: CMakeLists.txt  Main.cpp  ProjListModel.cpp  ProjListModel.h  SMComponent.cpp  SMComponent.h  StartMenuButtonLAF.h  VocalSharp_VocalShaper_StartMenu.cpp  VocalSharp_VocalShaper_StartMenu.h
Modules/VocalSharp.VocalShaper.ThemeManager/: Main.cpp  VocalSharp_VocalShaper_ThemeManager.cpp  VocalSharp_VocalShaper_ThemeManager.h
Modules/VocalSharp.VocalShaper.TrackEditor/: ColorEditor.cpp  ColorEditor.h  ColorEditorCallOutBoxLAF.h  HScroller.cpp  HScroller.h  LabelEditor.cpp  LabelEditor.h  LabelEditorCallOutBoxLAF.h  Main.cpp  ScrollerBase.cpp  ScrollerBase.h  TimeRuler.cpp  TimeRuler.h  TimeValueViewer.cpp  TimeValueViewer.h  TimeViewerBubbleLAF.h  TrackEditor.cpp  TrackEditor.h  TrackList.cpp  TrackList.h  TrackView.cpp  TrackView.h  TrackViewLinkButtonLAF.h  TrackViewSMButtonLAF.h  VScroller.cpp  VScroller.h  VocalSharp_VocalShaper_TrackEditor.cpp  VocalSharp_VocalShaper_TrackEditor.h
Modules/WuChang.JMADF.Configs/: CMakeLists.txt  Configs.cpp  Configs.h  Main.cpp  WuChang_JMADF_Configs.cpp  WuChang_JMADF_Configs.h
Modules/WuChang.JMADF.Device/: CMakeLists.txt  Main.cpp  WuChang_JMADF_Device.cpp  WuChang_JMADF_Device.h
Modules/WuChang.JMADF.DynamicRC/: CMakeLists.txt  DRCModule.cpp  DRCModule.h  Main.cpp  RCPool.cpp  RCPool.h  WuChang_JMADF_DynamicRC.cpp  WuChang_JMADF_DynamicRC.h
Modules/WuChang.JMADF.Fonts/: Fonts.cpp  Fonts.h  Main.cpp  WuChang_JMADF_Fonts.cpp  WuChang_JMADF_Fonts.h
Modules/WuChang.JMADF.GlobalConfigs/: GlobalConfigs.cpp  GlobalConfigs.h  Main.cpp  WuChang_JMADF_GlobalConfigs.cpp  WuChang_JMADF_GlobalConfigs.h
Modules/WuChang.JMADF.LookAndFeelConfigs/: CMakeLists.txt  LAFConfigs.cpp  LAFConfigs.h  LookAndFeelConfigsModule.cpp  LookAndFeelConfigsModule.h  Main.cpp  WuChang_JMADF_LookAndFeelConfigs.cpp  WuChang_JMADF_LookAndFeelConfigs.h
Modules/WuChang.JMADF.LookAndFeelFactory/: CMakeLists.txt  LAFFactory.h  LookAndFeelFactoryModule.cpp  LookAndFeelFactoryModule.h  Main.cpp
Modules/WuChang.JMADF.OpenGLComponentRender/: CMakeLists.txt  Main.cpp  WuChang_JMADF_OpenGLComponentRender.cpp  WuChang_JMADF_OpenGLComponentRender.h
Modules/WuChang.JMADF.Translates/: CMakeLists.txt  Main.cpp  Translates.cpp  Translates.h  WuChang_JMADF_Translates.cpp  WuChang_JMADF_Translates.h
VocalShaper/: CMakeLists.txt  Main.cpp  MainWindow.cpp  Splash.cpp  Splash.h
(+9 files in other folders)
