#JMADF官方模块
add_subdirectory (WuChang.JMADF.DynamicRC)
add_subdirectory (WuChang.JMADF.LookAndFeelConfigs)
add_subdirectory (WuChang.JMADF.Device)
add_subdirectory (WuChang.JMADF.OpenGLComponentRender)
add_subdirectory (WuChang.JMADF.Configs)
add_subdirectory (WuChang.JMADF.Translates)

#VocalShaper自有模块
add_subdirectory (VocalSharp.VocalShaper.Main)
add_subdirectory (VocalSharp.VocalShaper.MainWindow)
add_subdirectory (VocalSharp.VocalShaper.StartMenu)
add_subdirectory (VocalSharp.VocalShaper.LookAndFeelFactory)
